# clickup-cli

./: .gitignore  README.md  pyproject.toml
clickup_cli/: clickup.py  client.py  main.py  settings.py  spaces.py
